--- a/Centrex3.csproj
+++ b/Centrex3.csproj
@@ -9,6 +9,7 @@
     <None Remove="appsettings.json" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MessagingToolkit.QRCode" Version="1.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -23,7 +24,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.10" />
-    <PackageReference Include="ReportViewerCore.WinForms" Version="15.1.26" />
+    <!-- <PackageReference Include="ReportViewerCore.WinForms" Version="15.1.26" /> -->
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
   <ItemGroup>
@@ -38,6 +39,7 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>packages\Newtonsoft.Json.13.0.4\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <!--
     <Reference Include="Microsoft.ReportViewer.Common">
       <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
     </Reference>
@@ -53,6 +55,7 @@
     <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel">
       <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
     </Reference>
+    -->
     <Reference Include="Microsoft.SqlServer.Types">
       <HintPath>packages\Microsoft.SqlServer.Types.160.1000.6\lib\netstandard2.1\Microsoft.SqlServer.Types.dll</HintPath>
     </Reference>
