--- a/packages.config
+++ b/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
   <package id="MessagingToolkit.QRCode" version="1.3.0" targetFramework="net48" />
-  <package id="Microsoft.Reporting.WinForms.v11" version="1.0.0.0" targetFramework="net45" />
-  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net48" />
+  <!-- <package id="Microsoft.Reporting.WinForms.v11" version="1.0.0.0" targetFramework="net45" /> -->
+  <!-- <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net48" /> -->
   <package id="Microsoft.SqlServer.Types" version="160.1000.6" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="QRCoder" version="1.7.0" targetFramework="net48" />
